# xbox360-c64

./: .gitignore  .gitmodules  README.MD  build.sh  deploy.sh  monitor.sh
release/: x360c64.uf2
release/v1/: README.md  x360c64.uf2
schematic/usbcontroller-c64/: usbcontroller-c64.kicad_pcb  usbcontroller-c64.kicad_prl  usbcontroller-c64.kicad_pro  usbcontroller-c64.kicad_sch  ~usbcontroller-c64.kicad_pcb.lck
schematic/usbcontroller-c64/gerbers/: usbcontroller-c64-B_Cu.gbr  usbcontroller-c64-B_Mask.gbr  usbcontroller-c64-B_Silkscreen.gbr  usbcontroller-c64-Edge_Cuts.gbr  usbcontroller-c64-F_Cu.gbr  usbcontroller-c64-F_Mask.gbr  usbcontroller-c64-F_Silkscreen.gbr  usbcontroller-c64-job.gbrjob  usbcontroller-c64.drl
src/: CMakeLists.txt
src/x360c64/: CMakeLists.txt  device.h  foo.c  hid_app.c  main.c  tusb_config.h  xinput_host.c  xinput_host.h
src/x360c64/devices/: controllercontext.h  mouse.h  nintendo.h  ps4.h  xbox_360.h
